--- a/pkgs/checks/pubspec.yaml
+++ b/pkgs/checks/pubspec.yaml
@@ -7,7 +7,7 @@ repository: https://github.com/dart-lang/test/tree/master/pkgs/checks
 resolution: workspace
 
 environment:
-  sdk: ^3.5.0-259.0.dev
+  sdk: ^3.4.0
 
 dependencies:
   async: ^2.8.0
