--- a/pkgs/test/pubspec.yaml
+++ b/pkgs/test/pubspec.yaml
@@ -1,12 +1,12 @@
 name: test
-version: 1.25.9-wip-coop-coep-1
+version: 1.25.9-wip-coop-coep-2
 description: >-
   A full featured library for writing and running Dart tests across platforms.
 repository: https://github.com/dart-lang/test/tree/master/pkgs/test
 resolution: workspace
 
 environment:
-  sdk: ^3.5.0-259.0.dev
+  sdk: ^3.4.0
 
 dependencies:
   analyzer: '>=5.12.0 <7.0.0'
