--- a/pkgs/test_core/pubspec.yaml
+++ b/pkgs/test_core/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/dart-lang/test/tree/master/pkgs/test_core
 resolution: workspace
 
 environment:
-  sdk: ^3.5.0-259.0.dev
+  sdk: ^3.4.0
 
 dependencies:
   analyzer: '>=3.3.0 <7.0.0'
